# astrosessiontools

./: .dockerignore  .gitignore  .hadolint.yaml  LICENSE.md  README.md  astro_session_tools  astro_session_tools.py  setup.cfg
astrosessiontools/: __init__.py  mappings.py  utils.py
astrosessiontools/mappings/: __init__.py  cr2.py  fits.py
builds/: astrosessiontools.Dockerfile
docs/: README.md  contributing.md  location_data.md
tests/: dummy.py  test_dummy.py
