[metadata]
name = astrosessiontools
summary = Astrophotography session metadata extraction tool
author = Oliver Gutiérrez <ogutsua@gmail.com>
home_page =  https://gitlab.com/starlighthunter/astrosessiontools
platform = Linux
license = MIT
version = 0.1.0

[options]
packages =
    astrosessiontools
    astrosessiontools.mappings
include_package_data = True
scripts =
   astro_session_tools

[options.extras_require]
dev =
    tox
[tox:tox]
envlist = flake8,pylint,isort,pydocstyle

[testenv]
extras = dev

[testenv:flake8]
deps = 
    flake8
commands = flake8 astrosessiontools bin tests

[flake8]
exclude = .tox,build,dist,.eggs,venv,.venv
max-line-length = 100

[testenv:pylint]
deps =
    pylint
commands = pylint astrosessiontools bin tests

[testenv:isort]
deps = isort
commands = isort --check --diff .

[testenv:pydocstyle]
deps = pydocstyle
commands = pydocstyle --match-dir='^(?!(\.|build|dist|venv|.venv)).*'

[testenv:coverage]
deps =
    pytest
    pytest-cov
    coverage
commands =
  coverage run --source astrosessiontools --branch -m pytest --junitxml=coverage/junit.xml --ignore inttests --color=yes -v
  coverage report -m
  coverage html -d coverage/
  coverage xml -o coverage/coverage.xml
